--- a/dojo/students/AlondraVargas/index.html
+++ b/dojo/students/AlondraVargas/index.html
@@ -1,16 +1,16 @@
 
-<html>
-<head>
+<!-- saved from url=(0062)http://januarysmith.com/dojo/students/AlondraVargas/index.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
-	<a href="">Home</a>
-	<a href="puppy.html">Puppy</a>
+	<a href="http://januarysmith.com/dojo/students/AlondraVargas/index.html">Home</a>
+	<a href="http://januarysmith.com/dojo/students/AlondraVargas/puppy.html">Puppy</a>
 
-	<h1 >Hello</h1>
-	<h2 >my name is</h2>
+	<h1>Hello</h1>
+	<h2>my name is</h2>
 			
-	<img src="person.png">			
-	<p>Student Name</p>
+	<img src="images.jpg"><img src="cute.jpg">			
+	<p>Alondra Vargas</p>
 		
-</body>
-</html>
+
+</body></html>
