--- a/dojo/students/JoelWilkinson/index.html
+++ b/dojo/students/JoelWilkinson/index.html
@@ -9,7 +9,7 @@
 <img src="calvinandhobes3.png"><br>
 <img src="CalvinAndHobes.png"><br>
 <img src="calvinandhobbes6.png"><br>
-<img src="CalvinAndHobbes2.png"><br>
+<img src="calvinandhobbes2.png"><br>
 <img src="calvinandhobbes4.png"><br>
 <img src="calvinandhobbes5.png"><br>
 <h2>Calvin And Hobbes For Life!</h2>
