--- a/dojo/students/MykolasKevilus/index.html
+++ b/dojo/students/MykolasKevilus/index.html
@@ -13,16 +13,17 @@
 			
 	<img src="images/imgres.jpg">
 	<img src="images/tumblr_n88lugwECk1tquy17o1_500.gif">
-	<button id="myButton" class="float-left submit-button" >Alamo City Comic Con</button>
+	<img src="cartoon.png">
+	<img src="thebeast.png">
+	<h3>My Art<h3>
+	<a href="http://alamocitycomiccon.com/"><button id="myButton">Alamo City Comic Con</button></a>
 
 <script type="text/javascript">
     document.getElementById("myButton").onclick = function () {
         location.href = "http://alamocitycomiccon.com/";
         (function() {
-    var link = document.createElement('link');
-</script><!DOCTYPE html 
-      PUBLIC "-//W3C//DTD HTML 4.01//EN"
-      "http://www.w3.org/TR/html4/strict.dtd">
+    var link = document.createElement("link")
+</script>
 			
 	<p>Myko</p>
 		
