--- a/dojo/students/MykolasKevilus/index.html
+++ b/dojo/students/MykolasKevilus/index.html
@@ -7,20 +7,22 @@
 <body>
 	<a href="index.html">Home</a>
 	<a href="puppy.html">Puppy</a>
+	<a href="voteforscooter.html">Vote for Scooter<a/>
 
 	<h1>Hello</h1>
-	<h2>my name is Myko</h2>
-			
+	<h2>my name is Myko</h2>	
 	<img src="images/imgres.jpg">
 	<img src="images/tumblr_n88lugwECk1tquy17o1_500.gif">
-<<<<<<< HEAD
+	<img src="gify.gif">
+	<h3>My Art<h3>
 	<img src="cartoon.png">
 	<img src="thebeast.png">
-	<h3>My Art<h3>
-=======
->>>>>>> origin/master
+	<h5>New Wolverine Trailer!<h5>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/Div0iP65aZo" frameborder="0" allowfullscreen></iframe>
+	<h4>cool gifs<h4>
+    <img src="tumblr_mzv5asOhXf1r288moo1_500.gif">
+	<img src="giphy.gif">
 	<a href="http://alamocitycomiccon.com/"><button id="myButton">Alamo City Comic Con</button></a>
-
 <script type="text/javascript">
     document.getElementById("myButton").onclick = function () {
         location.href = "http://alamocitycomiccon.com/";
@@ -29,6 +31,11 @@
 </script>
 			
 	<p>Myko</p>
+	
+	<style>
+	body {
+		background-image: url("jd1Ylbc.jpg");
+	}
 		
 
 </body></html>
