--- a/dojo/students/MykolasKevilus/puppy.html
+++ b/dojo/students/MykolasKevilus/puppy.html
@@ -5,6 +5,8 @@
 	<body>
 	<a href="index.html" >Home</a>
 	<a href="puppy.html" >Puppy</a>
+	<a href="voteforscooter.html">Vote for Scooter<a/>
+
 	<h1>Found Puppy</h1>
 	<img id="puppyPicture" src="images/puppy1.jpg" height="500" width="500">
 	<br>
