--- a/dojo/students/EsmeraldaPadron/index.html
+++ b/dojo/students/EsmeraldaPadron/index.html
@@ -1,16 +1,15 @@
 
+
 <html>
 <head>
 </head>
 <body>
-	<a href="">Home</a>
-	<a href="puppy.html">Puppy</a>
 
 	<h1 >Hello</h1>
-	<h2 >my name is</h2>
-			
-	<img src="person.png">			
-	<p>Student Name</p>
+	<h2 >my name is</h2>	
+	<h1>Esmeralda</h1>
+	 <iframe allowtransparency="true" width="485" height="402" src="http://scratch.mit.edu/projects/embed/127008343/?autostart=false" frameborder="0" allowfullscreen></iframe>
+    
 		
 </body>
 </html>
