--- a/dojo/students/KrishnaGurung/index.html
+++ b/dojo/students/KrishnaGurung/index.html
@@ -2,16 +2,18 @@
 <head>
 </head>
 <body>
-	<a href="">Home</a>
-	<a href="puppy.html">Puppy</a>
+	<a href='index.html'>Home</a>
+	<a href='pokemon list1.html'>Gaming</a>
+	<a href='http://www.pokemon.com/us/pokedex/bulbasaur.html'>Pokedex</a>
 
-	<h1 >Hello</h1>
-	<h2 >my name is Krishna gurung</h2>
-			
-	<img src="boy.png">			
-	<p> KRISHNA Gurung</p>
 
-<p>My name is Krishna Gurung and some of my hobbies are sports like chess and soccer. I go to a school called Basis and I am in 6th grade. </p>
+	<h1>Hello</h1>
+	<h2>my name is
+			<img src='DancinZilla.gif' width="200" height="140" >	Krishna Gurung </h2>
+			<p>
+	<img src='Boy.gif'>	</p>		
+	<p>Krishna Gurung</p>
 		
-</body>
-</html>
+
+
+</body></html>
