--- a/dojo/students/SydneyVaughn/index.html
+++ b/dojo/students/SydneyVaughn/index.html
@@ -2,15 +2,15 @@
 <head>
 </head>
 <body>
- <a href="index.html">Home</a>
- <a href="puppy.html">Puppy</a>
+	<a href="index.html">Home</a>
+	<a href="puppy.html">Puppy</a>
+	<a href="mypage.html">Vote for Scooter<a>
 
- <h1>Hello</h1>
- <h2>my name is Sydney Vaughn.</h2>
-   
- <img src="girl.png">   
- <p>I enjoy playing golf,reading, and cooking.</p>
-  
-
+	<center>
+	<h1 >Scoop- The cafe to get the scoop for the scoop!</h1>
+			
+	<img src="icecream.jpg" width="800px">			
+	<p> <irealsweetandgood!</i> </p>
+	</center>	
 </body>
 </html>
