--- a/dojo/students/AmadeoKevilus/index.html
+++ b/dojo/students/AmadeoKevilus/index.html
@@ -1,16 +1,25 @@
-
 <html>
 <head>
 </head>
 <body>
-	<a href="">Home</a>
-	<a href="puppy.html">Puppy</a>
+	<a href="index.html">Home</a>
+	<a href="charmander.html">Charmander</a>
+    <a href="mypage.html">Vote for Scooter<a>
 
-	<h1 >Hello</h1>
-	<h2 >my name is</h2>
-			
-	<img src="person.png">			
-	<p>Student Name</p>
+	<h1>Hello how are you doing</h1>
+	<h2>my name is</h2>
+	<img src="giant.jpg">
+	<h3>MlG Gamer Amadeo</h3>
+	<img src="1234.gif">
+	<img src="tumblr_msu2ojWkqz1scncwdo1_500.gif">
+    <img src="tumblr_myreyeLBhS1scncwdo1_500.gif">	
+    <img src="giphy.gif">
+
+	<p>AmadeoKevilus</p>
+<style>
+    body  {
+    	background-image: url("bg-top.jpg")
+    }
 		
-</body>
-</html>
+</style>
+</body></html>
