--- a/dojo/students/JoelWilkinson/monkey.html
+++ b/dojo/students/JoelWilkinson/monkey.html
@@ -1,22 +1,27 @@
 <html>
-	<head>
+<head>
 		<title>Lost Monkey</title>
-	</head>
-	<body>
-	<a href="index.html" >Home</a>
-	<a href="Mypage.html" >Coolness</a>
-	<h1>Lost Monkey</h1>
-	<img id="monkeyPicture" src="monkey.png" height="500" width="500">
+</head>
+<body>
+	<a href="index.html">Home</a>
+	<a href="mypage3.html" >Calvin and Hobbes</a>
+	<a href="Mypage.html">Harambe</a>
+	<a href="mypage1.html">Wizard for president</a>
+	<a href="mypage2.html">Dance Dance And Party</a>
+	<a href="mypage4.html">Join my band!</a>
 	<br>
-	<img src="monkey.png" height="50" width="50" onmouseover="setMonkey();">
+	<h1>Lost Monkey</h1>
+	<img id="monkeyPicture" src="https://s-media-cache-ak0.pinimg.com/236x/01/59/40/01594057534c60f94af3165f26d85629.jpg" height="500" width="500">
+	<br>
+	<img src="https://s-media-cache-ak0.pinimg.com/236x/01/59/40/01594057534c60f94af3165f26d85629.jpg" height="50" width="50" onmouseover="setMonkey();">
 	<img src="monkey3.png" height="50" width="50" onmouseover="setMonkey3();">
 	<img src="monkey4.png" height="50" width="50" onmouseover="setMonkey4();">
 	<img src="monkey5.png" height="50" width="50" onmouseover="setMonkey5();">
-	<img src="monkey6.png" height="50" width="50" onmouseover="setMonkey6();">
-	<img src="monkey7.png" height="50" width="50" onmouseover="setMonkey7();">
-	<p> My monkeys are lost.  Their names are JoJo, and Wizard. They were last seen near the Alamo last weekend.</p>
-	<p>Please send me a email me if you find them at;</p>
-	<h2>mutantchickens@zoobuh.com</h2>
+	<img src="https://s-media-cache-ak0.pinimg.com/564x/f9/a0/a3/f9a0a3c1d006f5de1fbc2b91eea5d16b.jpg" height="50" width="50" onmouseover="setMonkey6();">
+	<img src="monkey7.png" hhttps://s-media-cache-ak0.pinimg.com/736x/27/9c/49/279c499671a9a6d0354b8ef0e62c5adc.jpgeight="55" width="37" onmouseover="setMonkey7();">
+	<h2> My monkeys are lost.  Their names are JoJo, and Wizard. They were last seen near the Alamo last weekend.</h2>
+	<h2>Please send me a email me if you find them at;</h2>
+	<h1>mutantchickens@<A HREF="https://www.zoobuh.com/">zoobuh.com</A></h1>
 
 	<script type="text/javascript">
 	var bigPicture = document.getElementById("monkeyPicture");
