--- a/dojo/students/JoelWilkinson/Mypage.html
+++ b/dojo/students/JoelWilkinson/Mypage.html
@@ -4,12 +4,15 @@
 </head>
 <body>
 	<a href="index.html">Home</a>
+	<a href="mypage3.html">Calvin and Hobbes</a>
 	<a href="monkey.html">Monkeys</a>
+	<a href="mypage1.html">Wizard for president</a>
+	<a href="mypage2.html">Dance Dance And Party</a>
 	<br>
-	<img src="harambe.png"><br>
-	<h1 onmouseover="this.style.color='pink';">REST IN PEACE HARAMBE!</h1>
-	<img src="monkey3.png">
-	<img src="monkey6.png">
-	<h1 onmouseover="this.style.color='orange';">WIZARD FOR PRESIDENT!</h1>
-</body>
+	<audio autoplay>
+	<source src="Taps.mp3" type="audio/mpeg">
+	</audio>
+	<center>
+	<h1 onmouseover="this.style.color='blue';" >REST IN PEACE HARAMBE!</h1>
+	<img src="harambe.png" width="1200px"><br>
 </html>
