--- a/dojo/students/SydneyVaughn/index.html
+++ b/dojo/students/SydneyVaughn/index.html
@@ -9,8 +9,11 @@
 	<center>
 	<h1 >Scoop- The cafe to get the scoop for the scoop!</h1>
 			
-	<img src="icecream.jpg" width="800px">			
-	<p> <irealsweetandgood!</i> </p>
+	<img src="icecream.jpg" width="800px">
+      <audio autoplay>
+<source src= "icecreamsound.mp3">
+</audio>		
+	<p> <</i> </p>
 	</center>	
 </body>
 </html>
