--- a/about/about.html
+++ b/about/about.html
@@ -91,8 +91,11 @@
 	                    <i class="fa fa-envelope fa-fw fa-lg"></i>
 	                    <a href="mailto:january@januarysmith.com">january@januarysmith.com</a>
 	                </p>
+	                <p >
+	                    Skype: january.smith  <a href="skype:january.smith?call">Call</a> or <a href="skype:january.smith?chat">Instant Message</a>
+	                </p>
 	                <a href="https://plus.google.com/+januarysmith"><img src="../img/about/GooglePlus.png" alt="Google Plus Logo" height="25" width="25"> Google+</a> 
-	                
+
 	                <a href="https://www.linkedin.com/profile/view?id=AAkAAAGVHm8Bd9oNt32i5kOrc9uzhzpPhSpXJjY"><img src="../img/about/LinkedIn.png" alt="LinkedIn Logo" height="25" width="25"> LinkedIn</a> 
 	                
 	                <a href="http://www.istockphoto.com/portfolio/01smith"><img src="../img/about/iStock.png" alt="LinkedIn Logo" height="23" width="23" > iStockPhoto</a> 
