--- a/about/about.html
+++ b/about/about.html
@@ -97,6 +97,8 @@
 	                <a href="https://plus.google.com/+januarysmith"><img src="../img/about/GooglePlus.png" alt="Google Plus Logo" height="25" width="25"> Google+</a> 
 
 	                <a href="https://www.linkedin.com/profile/view?id=AAkAAAGVHm8Bd9oNt32i5kOrc9uzhzpPhSpXJjY"><img src="../img/about/LinkedIn.png" alt="LinkedIn Logo" height="25" width="25"> LinkedIn</a> 
+
+	                <a href="https://www.instagram.com/january01smith/?hl=en"><img src="../img/about/Instagram.png" alt="InstaGram Logo" height="25" width="25"> Instagram</a> 
 	                
 	                <a href="http://www.istockphoto.com/portfolio/01smith"><img src="../img/about/iStock.png" alt="LinkedIn Logo" height="23" width="23" > iStockPhoto</a> 
                 	<br>
