--- a/dojo/students/JohnDoe/lostPuppy.html
+++ b/dojo/students/JohnDoe/lostPuppy.html
@@ -9,11 +9,12 @@
 	<a href="finalProject.html">Final Project</a>
 
 	<h1>Lost Puppy</h1>
-	<img id="puppyPicture" src="puppy.jpg" >
+
+	<img src="puppy.jpg" > <br><br>
 
 	My puppy is lost.  His name is Lucky. <br>
 
-	He was last seen near the Alamo last weekend. <br>
+	He was last seen near the Alamo on Friday. <br>
 
 	Please give me a call if you find him.
 
