--- a/dojo/students/JohnDoe/index.html
+++ b/dojo/students/JohnDoe/index.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 </head>
-<body>
+<body >
 	<a href="index.html">Home</a>
-	<a href="puppy.html">Puppy</a>
-	<a href="mypage.html">Vote for Scooter</a>
+	<a href="lostPuppy.html">Lost Puppy</a>
+	<a href="aboutMe.html">About Me</a>
+	<a href="finalProject.html">Final Project</a>
 
-	<h1 >Hello</h1>
-	<h2 >my name is</h2>
-			
-	<img src="boy.png">			
-	<p>John Doe</p>
+	<h1 style="text-align: center">HTML Class Exercises</h1>
+	<div style="text-align: center">
+		<img src="html.png" >			
+	</div>
 		
 </body>
 </html>
