Update Student Samples

--- a/dojo/students/JohnDoe/aboutMe.html
+++ b/dojo/students/JohnDoe/aboutMe.html
@@ -5,8 +5,13 @@
 </head>
 <body >
 	<a href="index.html">Home</a>
+	<a href="helloWorld.html">Hello World</a>
 	<a href="lostPuppy.html">Lost Puppy</a>
 	<a href="aboutMe.html">About Me</a>
+	<a href="howTo.html">How To</a>
+	<a href="rainbow.html">Rainbow</a>
+	<a href="quotes.html">Quotes</a>
+	<a href="comicStrip.html">Comic Strip</a>
 	<a href="finalProject.html">Final Project</a>
 
 	<center>
