--- a/dojo/students/JohnDoe/comicStrip.html
+++ b/dojo/students/JohnDoe/comicStrip.html
@@ -2,18 +2,28 @@
 <head>
 	<title>Comic</title>
 </head>
-<body style="background-color: darkgreen; ">
+<body style="background-color: darkgreen; margin: 0px;" >
+	<a href="index.html">Home</a>
+	<a href="helloWorld.html">Hello World</a>
+	<a href="lostPuppy.html">Lost Puppy</a>
+	<a href="aboutMe.html">About Me</a>
+	<a href="howTo.html">How To</a>
+	<a href="rainbow.html">Rainbow</a>
+	<a href="quotes.html">Quotes</a>
+	<a href="comicStrip.html">Comic Strip</a>
+	<a href="finalProject.html">Final Project</a>
+	<br>
 	<h1 style="color:white">Knock knock...</h1>
 
 	<div style="width:300px; height:300px; background-color: white; border: 5px solid black; text-align: center; display: inline-block;">
 		<img src="boy.jpg">
-		<h2>Knock knock...</h2>
+		<h2>Knock knock</h2>
 	</div>
 
 	<div style="width:300px; height:300px; background-color: white; border: 5px solid black; text-align: center; display: inline-block;">
 		<img src="girl.jpg">
 		<h2>Who's there?</h2>
 	</div>
-	
+
 </body>
 </html>
