--- a/dojo/students/JohnDoe/finalProject.html
+++ b/dojo/students/JohnDoe/finalProject.html
@@ -1,8 +1,48 @@
 <html>
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
 	<title>Final Project</title>
 </head>
-<body>
-	<h1>From Puppy to Dog...</h1>
+<body style="background-color:darkslategray;">
+	<a href="index.html">Home</a>
+	<a href="helloWorld.html">Hello World</a>
+	<a href="lostPuppy.html">Lost Puppy</a>
+	<a href="aboutMe.html">About Me</a>
+	<a href="howTo.html">How To</a>
+	<a href="rainbow.html">Rainbow</a>
+	<a href="quotes.html">Quotes</a>
+	<a href="comicStrip.html">Comic Strip</a>
+	<a href="finalProject.html">Final Project</a>
+
+	<div style="background-color:white; width:860px; height:600px; border-radius: 15px; margin: auto; margin-top:100px;">
+	<h1 style="font-family: 'Josefin Slab', serif;text-align: center;">My Projects Website</h1>
+		<div>
+			<a href="">
+				<img src="helloWorldSS.png" style=" width:200px; height: 200px; border: 1px solid black; margin: 5px;">
+			</a>
+			<a href="">
+				<img src="lostPuppySS.png" style=" width:200px; height: 200px; border: 1px solid black; margin: 5px;">
+			</a>
+			<a href="">
+				<img src="aboutMeSS.png" style=" width:200px; height: 200px; border: 1px solid black; margin: 5px;">
+			</a>
+			<a href="">
+				<img src="howToSS.png" style=" width:200px; height: 200px; border: 1px solid black; margin: 5px;">
+			</a>		
+			<a href="">
+				<img src="rainbowSS.png" style=" width:200px; height: 200px; border: 1px solid black; margin: 5px;">
+			</a>
+			<a href="">
+				<img src="quotesSS.png" style=" width:200px; height: 200px; border: 1px solid black; margin: 5px;">
+			</a>
+			<a href="">
+				<img src="comicStripSS.png" style=" width:200px; height: 200px; border: 1px solid black; margin: 5px;">
+			</a>
+			<a href="">
+				<img src="finalProjectSS.png" style=" width:200px; height: 200px; border: 1px solid black; margin: 5px;">
+			</a>				
+		</div>
+
+	</div>
 </body>
 </html>
