--- a/dojo/students/JohnDoe/howTo.html
+++ b/dojo/students/JohnDoe/howTo.html
@@ -3,6 +3,15 @@
 	<title>Banana Split Recipe</title>
 </head>
 <body>
+	<a href="index.html">Home</a>
+	<a href="helloWorld.html">Hello World</a>
+	<a href="lostPuppy.html">Lost Puppy</a>
+	<a href="aboutMe.html">About Me</a>
+	<a href="howTo.html">How To</a>
+	<a href="rainbow.html">Rainbow</a>
+	<a href="quotes.html">Quotes</a>
+	<a href="comicStrip.html">Comic Strip</a>
+	<a href="finalProject.html">Final Project</a>
 	<h1>Banana Split</h1>
 </body>
 </html>
