--- a/dojo/students/JohnDoe/quotes.html
+++ b/dojo/students/JohnDoe/quotes.html
@@ -4,6 +4,16 @@
 	<title>Favorite Quotes</title>
 </head>
 <body>
+	<a href="index.html">Home</a>
+	<a href="helloWorld.html">Hello World</a>
+	<a href="lostPuppy.html">Lost Puppy</a>
+	<a href="aboutMe.html">About Me</a>
+	<a href="howTo.html">How To</a>
+	<a href="rainbow.html">Rainbow</a>
+	<a href="quotes.html">Quotes</a>
+	<a href="comicStrip.html">Comic Strip</a>
+	<a href="finalProject.html">Final Project</a>
+
 	<h1>Quotes</h1>
 	<p style="font-family: 'Pacifico', cursive; color:blue;">The journey of a thousand miles begins with a single step</p>
 	<br>
