--- a/dojo/students/JohnDoe/rainbow.html
+++ b/dojo/students/JohnDoe/rainbow.html
@@ -3,6 +3,18 @@
 	<title>Rainbow</title>
 </head>
 <body>
+	<a href="index.html">Home</a>
+	<a href="helloWorld.html">Hello World</a>
+	<a href="lostPuppy.html">Lost Puppy</a>
+	<a href="aboutMe.html">About Me</a>
+	<a href="howTo.html">How To</a>
+	<a href="rainbow.html">Rainbow</a>
+	<a href="quotes.html">Quotes</a>
+	<a href="comicStrip.html">Comic Strip</a>
+	<a href="finalProject.html">Final Project</a>
+	
+	<br>
+	
 	<h1 style="color:red">RED</h1>
 	<h1 style="color:orange">ORANGE</h1>
 	<h1 style="color:yellow">YELLOW</h1>
