Update Student Samples

--- a/dojo/students/JohnDoe/finalProject.html
+++ b/dojo/students/JohnDoe/finalProject.html
@@ -15,7 +15,8 @@
 	<a href="finalProject.html">Final Project</a>
 
 	<div style="background-color:white; width:860px; height:600px; border-radius: 15px; margin: auto; margin-top:100px;">
-	<h1 style="font-family: 'Josefin Slab', serif;text-align: center;">My Projects Website</h1>
+	<br>
+	<h1 style="font-family: 'Josefin Slab', serif;text-align: center;">My HTML Projects Website</h1>
 		<div>
 			<a href="">
 				<img src="helloWorldSS.png" style=" width:200px; height: 200px; border: 1px solid black; margin: 5px;">
