--- a/dojo/students/JohnDoe/howTo.html
+++ b/dojo/students/JohnDoe/howTo.html
@@ -12,6 +12,18 @@
 	<a href="quotes.html">Quotes</a>
 	<a href="comicStrip.html">Comic Strip</a>
 	<a href="finalProject.html">Final Project</a>
+
 	<h1>Banana Split</h1>
+	<img src="bananaSplit.jpg">
+	<h2>Ingredients</h2>
+	<ul>
+	<li>banana</li>
+	<li>chocolate syurp</li>
+	</ul>
+	<h2>Steps</h2>
+	<ol>
+	<li>Cut the banana down the middle</li>
+	<li>Slather with chocolate syurp</li>
+	</ol>
 </body>
 </html>
