--- a/about/about.html
+++ b/about/about.html
@@ -98,7 +98,7 @@
 
 	                <a href="https://www.instagram.com/january01smith/?hl=en"><img src="../img/about/Instagram.png" alt="InstaGram Logo" height="25" width="25"> Instagram</a> 
 	                
-	                <a href="http://www.istockphoto.com/portfolio/01smith"><img src="../img/about/iStock.png" alt="LinkedIn Logo" height="23" width="23" > iStockPhoto</a> 
+	                <a href="http://www.istockphoto.com/portfolio/january01smith"><img src="../img/about/iStock.png" alt="LinkedIn Logo" height="23" width="23" > iStockPhoto</a> 
                 	<br>
                      <br>
 		            <br>
