Add Camp Verde Home Page Pano

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         // set parameters for the viewer:
         viewer.setVars({
-          pano: "img/home/FeedStore_",
+          pano: "img/home/CampVerde_",
           format: "14faces",
           pan: 30,
           minpan: -180,
