Sabinal River Swimming Hole
add Sabinal River Swimming Hole

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         // set parameters for the viewer:
         viewer.setVars({
-          pano: "img/home/CampVerde_",
+          pano: "img/home/SabinalRiverSwimmingHole_",
           format: "14faces",
           pan: 30,
           minpan: -180,
